<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/Eastern_Blue">


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/students_title"
        android:textStyle="bold"
        android:textSize="19dp"
        />

    <LinearLayout
        android:id="@+id/FirstNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:orientation="horizontal">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/student_first_name"
            android:textStyle="bold"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/FirstNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_height="wrap_content">



        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/student_last_name"/>


        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/student_age"/>

        <EditText
            android:id="@+id/ageEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/student_class"/>

        <EditText
            android:id="@+id/classEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/studens_go_main_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:visibility="visible"
        android:text="@string/go_to_main_activity"/>



</LinearLayout>
